test/corpus/ffi.txt
================================================================================
Foreign function definitions
================================================================================

function adder() js {
  return 9
}

`x` => adder()

--------------------------------------------------------------------------------

(source_file
  (definition
    (foreignFunctionDefinition
      (name)
      (foreignLanguageName)
      (foreignFunctionBody
        (foreignLanguageCode
          (noBraces)))))
  (rewrite
    (codeSnippet
      (backtickSnippet
        (snippetContent)))
    (nodeLike
      (name))))
